--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,10 @@ input[type=range]:focus::-moz-range-thumb {
     background: rgba(255, 0, 0, 1);
    }
     /* End CSS for slider1 */
+html, body {
+    margin: 0;
+    padding: 0;
+}
 div#key {
     width: 856px;
     height: auto;
@@ -179,11 +183,15 @@ p#text {
     font-family: 'Libre Baskerville', serif;
     font-size: 16px;
     line-height: 1.625rem; 
+    padding-right: 50px;
+    margin-right: 348px;
 }
 .text2 {
     font-family: 'Libre Baskerville', serif;
     font-size: 16px;
     line-height: 1.625rem; 
+    padding-right: 50px;
+    margin-right: 348px;
 }
 .text3 {
     font-family: 'Libre Baskerville', serif;
@@ -193,6 +201,7 @@ p#text {
 h3 {
     font-family: 'Roboto Slab', serif;
     font-weight: 800;
+    text-align: left;
 }
 /*Begin menu CSS*/
 #list1 {
