--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ h3 {
 list-style-type: none;
 margin: 0;
 padding: 0;
-width: 14%; 
+width: 200px; 
 height: 100%;
 position: fixed; 
 overflow: auto;
