--- a/css/main.css
+++ b/css/main.css
@@ -182,17 +182,14 @@ div#introdiv {
 p#text {
     font-family: 'Libre Baskerville', serif;
     font-size: 16px;
-    line-height: 1.625rem; 
+    line-height: 1.625rem;
+    padding-right: 150px;
 }
 .text2 {
     font-family: 'Libre Baskerville', serif;
     font-size: 16px;
-    line-height: 1.625rem; 
-}
-.text3 {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 16px;
-    line-height: 1.625rem; 
+    line-height: 1.625rem;
+    padding-right: 150px;
 }
 h3 {
     font-family: 'Roboto Slab', serif;
