--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,8 @@
 }
  /*Begin CSS for slider1 */        
 div#comparison { 
-  width: 856px;
-  height: 470px;
+  width: 876px;
+  height: 467px;
   max-width: 1000px;
   max-height: 600px;
   overflow: hidden;
@@ -91,12 +91,12 @@ div#comparison {
   padding-left: 11%;
 }
 div#comparison figure { 
-  background-image: url(http://www4.ncsu.edu/~jtnorri2/1971alt2.png); 
+  background-image: url(http://www4.ncsu.edu/~jtnorri2/1971redo.png); 
   background-size: cover;
   position: relative;
   font-size: 0;
-  width: 856px; 
-  height: 470px;
+  width: 876px; 
+  height: 467px;
   margin: 0; 
 }
 div#comparison figure > img { 
@@ -104,14 +104,14 @@ div#comparison figure > img {
   width: 100%;
 }
 div#comparison figure div { 
-  background-image: url(http://www4.ncsu.edu/~jtnorri2/2015alt.png);
+  background-image: url(http://www4.ncsu.edu/~jtnorri2/2015redo.png);
   background-size: cover;
   position: absolute;
   width: 50%; 
   box-shadow: 0 5px 10px -2px rgba(255, 0, 0, 1);
   overflow: hidden;
   bottom: 0;
-  height: 470px;
+  height: 467px;
 }
 
 input[type=range]{
