--- a/css/main.css
+++ b/css/main.css
@@ -328,3 +328,157 @@ figure figcaption {
     }
 }
 /*End modal image CSS*/
+/*Media Queries test*/
+@media (max-width: 401px) {
+    p#text {
+        font-family: 'Libre Baskerville', serif;
+        font-size: 14px;
+        line-height: 1.625rem;
+        padding-right: 0%;
+    }
+    .text2 {
+        font-family: 'Libre Baskerville', serif;
+        font-size: 14px;
+        line-height: 1.625rem; 
+        padding-right: 0%;
+    }
+    #list1 {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 21%; 
+        height: 100%;
+        position: fixed; 
+        overflow: auto;
+        background-color: #3b3b3b;
+    }
+    #list1 li a {
+        display: block;
+        color: aliceblue;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Droid Serif', serif; 
+        font-size: 55%;
+    }
+    figure img {
+        width: 300px;
+        padding-left: 30%;
+    }
+    figure figcaption {
+        text-align: left; 
+        height: 42px;
+        width: 200px;
+        font-size: 10px;
+        padding-left: 30%;
+    }
+}
+@media (min-width:402px) and (max-width:600px) {
+        p#text {
+        font-family: 'Libre Baskerville', serif;
+        font-size: 15px;
+        line-height: 1.625rem;
+        padding-right: 10%;
+    }
+    .text2 {
+        font-family: 'Libre Baskerville', serif;
+        font-size: 15px;
+        line-height: 1.625rem; 
+        padding-right: 10%;
+    }
+    #list1 {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 21%; 
+        height: 100%;
+        position: fixed; 
+        overflow: auto;
+        background-color: #3b3b3b;
+    }
+    #list1 li a {
+        display: block;
+        color: aliceblue;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Droid Serif', serif; 
+        font-size: 65%;
+    }
+    figure img {
+        width: 350px;
+        padding-left: 20%;
+    }
+    figure figcaption {
+        text-align: left; 
+        height: 42px;
+        width: 300px;
+        font-size: 12px;
+        padding-left: 20%;
+    }
+}
+@media (min-width:601px) and (max-width:735px) {
+    #list1 {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 20%; 
+        height: 100%;
+        position: fixed; 
+        overflow: auto;
+        background-color: #3b3b3b;
+    }
+    #list1 li a {
+        display: block;
+        color: aliceblue;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Droid Serif', serif; 
+        font-size: 65%;
+    }
+        figure img {
+        width: 350px;
+        padding-left: 20%;
+    }
+    figure figcaption {
+        text-align: left; 
+        height: 42px;
+        width: 300px;
+        font-size: 12px;
+        padding-left: 20%;
+    }
+}
+@media (min-width:736px) and (max-width:900px) {
+    #list1 {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 15%; 
+        height: 100%;
+        position: fixed; 
+        overflow: auto;
+        background-color: #3b3b3b;
+    }
+    #list1 li a {
+        display: block;
+        color: aliceblue;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Droid Serif', serif; 
+        font-size: 70%;
+    }
+        figure img {
+        width: 350px;
+        padding-left: 20%;
+    }
+    figure figcaption {
+        text-align: left; 
+        height: 42px;
+        width: 300px;
+        font-size: 12px;
+        padding-left: 20%;
+    }  
+}
+/*End media queries*/
